refactor: simplify logging storage helpers